--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.41.0+git) UNRELEASED; urgency=medium
+
+  * WIP (generated upon release).
+
+ -- Chris Lamb <lamby@debian.org>  Mon, 09 Dec 2019 11:45:51 +0000
+
 lintian (2.41.0) unstable; urgency=medium
 
   [ Felix Lechner ]
