--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.42.0+git) UNRELEASED; urgency=medium
+
+  * WIP (generated upon release).
+
+ -- Chris Lamb <lamby@debian.org>  Thu, 19 Dec 2019 15:52:43 +0000
+
 lintian (2.42.0) unstable; urgency=medium
 
   [ Felix Lechner ]
