Add missing tag summary checks to debian/changelog and fix the generate-tag-summary to match our newer style of changelog entry placeholder.

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,29 @@ lintian (2.42.0+git) UNRELEASED; urgency=medium
 
 lintian (2.42.0) unstable; urgency=medium
 
+  * Summary of tag changes:
+    + Added:
+      - concatenated-upstream-signatures
+      - doubly-armored-upstream-signature
+      - empty-upstream-sources
+      - explicitly-armored-upstream-signature
+      - fortran-module-does-not-declare-version
+      - inconsistent-maintainer
+      - missing-prerequisite-for-fortran-module
+      - no-dh-sequencer
+      - opentype-font-prohibits-installable-embedding
+      - opentype-font-wrong-filename
+      - quoted-placeholder-in-mailcap-entry
+      - repackaged-source-not-advertised
+      - spurious-fields-in-upstream-signature
+      - truetype-font-prohibits-installable-embedding
+      - truetype-font-wrong-filename
+      - wrong-vcs-location-for-dpmt
+      - wrong-vcs-location-for-papt
+    + Removed:
+      - service-key-has-whitespace
+      - source-contains-empty-directory
+
   [ Felix Lechner ]
   * Add new checks to identify and notify about issues in upstream
     signatures. (Closes: #929429, #929434, #929435, #929436)
@@ -38,6 +61,16 @@ lintian (2.42.0) unstable; urgency=medium
  -- Chris Lamb <lamby@debian.org>  Thu, 19 Dec 2019 12:01:30 +0000
 
 lintian (2.41.0) unstable; urgency=medium
+
+  * Summary of tag changes:
+    + Added:
+      - debian-watch-file-standard
+      - duplicate-packaging-file
+      - image-file-has-conflicting-name
+      - image-file-has-unexpected-name
+      - incorrect-packaging-filename
+      - manpage-without-executable
+      - tab-in-license-text
 
   [ Felix Lechner ]
   * Check for tab characters in debian/copyright files. (Closes: #946026)
@@ -73,6 +106,12 @@ lintian (2.41.0) unstable; urgency=medium
 
 lintian (2.40.0) unstable; urgency=medium
 
+  * Summary of tag changes:
+    + Added:
+      - package-is-co-maintained
+      - package-is-maintained-by-individual
+      - package-is-team-maintained
+
   [ Chris Lamb ]
   * Sync data/fields/build-profiles and the long description of
     invalid-profile-name-in-build-profiles-field with the latest profiles,
@@ -96,6 +135,11 @@ lintian (2.40.0) unstable; urgency=medium
 
 lintian (2.39.0) unstable; urgency=medium
 
+  * Summary of tag changes:
+    + Added:
+      - debian-rules-not-executable
+      - package-depends-on-an-x-font-package
+
   [ Scott Talbert ]
   * Add wmem{cpy,move,set} to the list of excluded hardened functions to
     avoid many false-positives. (Closes: #921136)
@@ -112,6 +156,10 @@ lintian (2.39.0) unstable; urgency=medium
  -- Chris Lamb <lamby@debian.org>  Thu, 28 Nov 2019 10:34:27 +0000
 
 lintian (2.38.0) unstable; urgency=medium
+
+  * Summary of tag changes:
+    + Removed:
+      - package-depends-on-an-x-font-package
 
   [ Felix Lechner ]
   * Process all overrides for a particular tag, not just the last one.
