--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.43.0+git) UNRELEASED; urgency=medium
+
+  * WIP (generated upon release).
+
+ -- Chris Lamb <lamby@debian.org>  Fri, 27 Dec 2019 19:11:00 +0000
+
 lintian (2.43.0) unstable; urgency=medium
 
   * Summary of tag changes:
