--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.44.0+git) UNRELEASED; urgency=medium
+
+  * WIP (generated upon release).
+
+ -- Chris Lamb <lamby@debian.org>  Wed, 08 Jan 2020 12:00:35 +0000
+
 lintian (2.44.0) unstable; urgency=medium
 
   * Summary of tag changes:
