--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.45.0+git) UNRELEASED; urgency=medium
+
+  * WIP (generated upon release).
+
+ -- Chris Lamb <lamby@debian.org>  Mon, 13 Jan 2020 14:57:26 +0000
+
 lintian (2.45.0) unstable; urgency=medium
 
   * Summary of tag changes:
