--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.46.0+git) UNRELEASED; urgency=medium
+
+  * WIP (generated upon release).
+
+ -- Chris Lamb <lamby@debian.org>  Sun, 19 Jan 2020 10:27:58 +0000
+
 lintian (2.46.0) unstable; urgency=medium
 
   [ Gianfranco Costamagna ]
