--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.47.0+git) UNRELEASED; urgency=medium
+
+  * WIP (generated upon release).
+
+ -- Chris Lamb <lamby@debian.org>  Fri, 24 Jan 2020 11:39:35 +0000
+
 lintian (2.47.0) unstable; urgency=medium
 
   * Summary of tag changes:
