--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.48.0+git) UNRELEASED; urgency=medium
+
+  * WIP (generated upon release).
+
+ -- Chris Lamb <lamby@debian.org>  Wed, 29 Jan 2020 11:51:54 +0100
+
 lintian (2.48.0) unstable; urgency=medium
 
   [ Felix Lechner ]
