--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.49.0+git) UNRELEASED; urgency=medium
+
+  * WIP (generated upon release).
+
+ -- Chris Lamb <lamby@debian.org>  Tue, 04 Feb 2020 18:09:04 +0100
+
 lintian (2.49.0) unstable; urgency=medium
 
   * Summary of tag changes:
