--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,20 @@
-lintian (2.49.0+git) UNRELEASED; urgency=medium
+lintian (2.50.0) unstable; urgency=medium
 
-  * WIP (generated upon release).
+  * Summary of tag changes:
+    + Added:
+      - debian-watch-line-invalid
 
- -- Chris Lamb <lamby@debian.org>  Tue, 04 Feb 2020 18:09:04 +0100
+  [ Felix Lechner ]
+  * In watch files, allow spaces between options when commas are present.
+    (Closes: #950250, #950277)
+  * Add a new "debian-watch-line-invalid" for watch lines that fail to
+    parse.
+
+  [ Andrius Merkys ]
+  * Fix '<' and '>' in the long description of
+    pkg-js-autopkgtest-test-is-missing.
+
+ -- Chris Lamb <lamby@debian.org>  Fri, 07 Feb 2020 13:05:25 +0000
 
 lintian (2.49.0) unstable; urgency=medium
 
