--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.50.0+git) UNRELEASED; urgency=medium
+
+  * WIP (generated upon release).
+
+ -- Chris Lamb <lamby@debian.org>  Fri, 07 Feb 2020 14:45:23 +0000
+
 lintian (2.50.0) unstable; urgency=medium
 
   * Summary of tag changes:
