--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.52.0+git) UNRELEASED; urgency=medium
+
+  * WIP (generated upon release).
+
+ -- Chris Lamb <lamby@debian.org>  Thu, 13 Feb 2020 13:26:13 +0000
+
 lintian (2.52.0) unstable; urgency=medium
 
   * Summary of tag changes:
