--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,17 @@
-lintian (2.52.0+git) UNRELEASED; urgency=medium
+lintian (2.53.0) unstable; urgency=medium
 
-  * WIP (generated upon release).
+  * Summary of tag changes:
+    + Added:
+      - nodejs-module-not-declared
 
- -- Chris Lamb <lamby@debian.org>  Thu, 13 Feb 2020 13:26:13 +0000
+  [ Xavier Guimard ]
+  * Check if Node.js modules installed in the Node.js root directories are
+    declared in the "Provides:" field.
+
+  [ Felix Lechner ]
+  * Parse tarball file listings using tar's C quoting style. (Closes: #950589)
+
+ -- Chris Lamb <lamby@debian.org>  Sun, 16 Feb 2020 20:08:35 +0000
 
 lintian (2.52.0) unstable; urgency=medium
 
