--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.53.0+git) UNRELEASED; urgency=medium
+
+  * WIP (generated upon release).
+
+ -- Chris Lamb <lamby@debian.org>  Sun, 16 Feb 2020 20:36:23 +0000
+
 lintian (2.53.0) unstable; urgency=medium
 
   * Summary of tag changes:
