--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.54.0+git) UNRELEASED; urgency=medium
+
+  * WIP (generated upon release).
+
+ -- Chris Lamb <lamby@debian.org>  Thu, 20 Feb 2020 13:07:05 -0800
+
 lintian (2.54.0) unstable; urgency=medium
 
   [ Chris Lamb ]
