--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.55.0+git) UNRELEASED; urgency=medium
+
+  * WIP (generated upon release).
+
+ -- Chris Lamb <lamby@debian.org>  Sun, 23 Feb 2020 10:06:08 -0800
+
 lintian (2.55.0) unstable; urgency=medium
 
   * Summary of tag changes:
