--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.56.0+git) UNRELEASED; urgency=medium
+
+  * WIP (generated upon release).
+
+ -- Chris Lamb <lamby@debian.org>  Wed, 26 Feb 2020 10:53:34 -0800
+
 lintian (2.56.0) unstable; urgency=medium
 
   * Summary of tag changes:
