Use Severity field in tags to determine their display prominence directly. (Closes: #935706)
After a discussion in Bug#935706, the old mechanism between tag severity and
tag certainty that determined the warning level was abandoned.

The prominence a tag is given during output is now determined directly by
the field Severity. The value can be one of 'error', 'warning', 'info',
'pedantic' or 'classification'.

The new values correspond directly to the familiar levels, and are often
requested in bug reports.

The old concept of tag certainty no longer exists in Lintian.

--- a/private/TODO
+++ b/private/TODO
@@ -26,9 +26,8 @@ checks:
   references have them, and more generally that appropriate references are
   present.  (Need some way to track this sort of regular tag maintenance.)
 
-- Check current tag certainties and severities against the results from
-  lintian.d.o and adjust.  If something has legitimate overrides, it's not
-  severity: certain, for instance.
+- Check current tag severities against the results from lintian.d.o and
+  adjust.
 
 doc:
 
@@ -36,7 +35,7 @@ doc:
   somewhere and say that it's not going to be updated.
 
 - Update the Lintian manual:
-  + document severity/certainty
+  + document visibility
   + document other output formats
   + document the reporting framework
   + developer documentation of the test suite, submitting patches, etc.
