--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.57.0+git) UNRELEASED; urgency=medium
+
+  * WIP (generated upon release).
+
+ -- Chris Lamb <lamby@debian.org>  Mon, 16 Mar 2020 23:50:31 +0000
+
 lintian (2.57.0) unstable; urgency=medium
 
   * Summary of tag changes:
