--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.58.0+git) UNRELEASED; urgency=medium
+
+  * WIP (generated upon release).
+
+ -- Chris Lamb <lamby@debian.org>  Fri, 20 Mar 2020 10:19:59 +0000
+
 lintian (2.58.0) unstable; urgency=medium
 
   * Summary of tag changes:
