--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.61.0+git) UNRELEASED; urgency=medium
+
+  * WIP (generated upon release).
+
+ -- Chris Lamb <lamby@debian.org>  Mon, 30 Mar 2020 11:58:18 +0100
+
 lintian (2.61.0) unstable; urgency=medium
 
   * Summary of tag changes:
