In check debian/changelog, do not analyze changelogs or NEWS files with national encodings.
Makes the check more robust when files are not encoded in UTF-8. Also
provides a new test with national encoding.

This commit is part of a series to improve Unicode handling in Lintian.

Gbp-Dch: ignore

--- a/t/tags/checks/debian/changelog/national-encoding-news/build-spec/debian/NEWS
+++ b/t/tags/checks/debian/changelog/national-encoding-news/build-spec/debian/NEWS
@@ -1,6 +1,6 @@
 binary (4-1.1) UNRELEASED; urgency=high
 
-  This is a Debian NEWS entry that isn't encoded properly in UTF-8: Ã¼.
+  This is a Debian NEWS entry that isn't encoded properly in UTF-8: ü.
   It also has a usefull speling error.
 
  -- Russ Allbery <rra@debian.org>  Sun, 14 Oct 2007 17:11:36 -0700
