--- a/t/tags/checks/debian/changelog/changelog-file-news-general/build-spec/debian/NEWS
+++ b/t/tags/checks/debian/changelog/changelog-file-news-general/build-spec/debian/NEWS
@@ -1,7 +1,7 @@
 changelog-file-news-general (1.0) UNRELEASED; urgency=high
 
   * This is a major change, which shouldn't be using an asterisk.  It also
-    has an ISO 8859-1 character: µ and a speling error.
+    has an ISO 8859-1 character: Âµ and a speling error.
 
  -- Russ Allbery <rra@debian.org>  Fri, 01 Jan 2010 20:57:15 -0800
 changelog-file-news-general (0.9) unstable; urgency=low
