--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.62.0+git) UNRELEASED; urgency=medium
+
+  * WIP (generated upon release).
+
+ -- Chris Lamb <lamby@debian.org>  Thu, 02 Apr 2020 17:33:02 +0100
+
 lintian (2.62.0) unstable; urgency=medium
 
   * Summary of tag changes:
