--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.63.0+git) UNRELEASED; urgency=medium
+
+  * WIP (generated upon release).
+
+ -- Chris Lamb <lamby@debian.org>  Mon, 06 Apr 2020 11:03:27 +0100
+
 lintian (2.63.0) unstable; urgency=medium
 
   * Summary of tag changes:
