--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-lintian (2.63.0+git) UNRELEASED; urgency=medium
+lintian (2.64.0) unstable; urgency=medium
 
-  * WIP (generated upon release).
+  [ Felix Lechner ]
+  * Do not check for conffiles in udebs. (Closes: #956077)
 
- -- Chris Lamb <lamby@debian.org>  Mon, 06 Apr 2020 11:03:27 +0100
+ -- Chris Lamb <lamby@debian.org>  Tue, 07 Apr 2020 07:17:57 +0000
 
 lintian (2.63.0) unstable; urgency=medium
 
