--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.64.0+git) UNRELEASED; urgency=medium
+
+  * WIP (generated upon release).
+
+ -- Chris Lamb <lamby@debian.org>  Tue, 07 Apr 2020 08:19:23 +0100
+
 lintian (2.64.0) unstable; urgency=medium
 
   [ Felix Lechner ]
