--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.65.0+git) UNRELEASED; urgency=medium
+
+  * WIP (generated upon release).
+
+ -- Chris Lamb <lamby@debian.org>  Fri, 10 Apr 2020 11:26:11 +0100
+
 lintian (2.65.0) unstable; urgency=medium
 
   * Summary of tag changes:
