--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.66.0+git) UNRELEASED; urgency=medium
+
+  * WIP (generated upon release).
+
+ -- Chris Lamb <lamby@debian.org>  Fri, 17 Apr 2020 20:41:20 +0100
+
 lintian (2.66.0) unstable; urgency=medium
 
   * Summary of tag changes:
