--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.67.0+git) UNRELEASED; urgency=medium
+
+  * WIP (generated upon release).
+
+ -- Chris Lamb <lamby@debian.org>  Thu, 23 Apr 2020 11:51:29 +0100
+
 lintian (2.67.0) unstable; urgency=medium
 
   * Summary of tag changes:
