--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.68.0+git) UNRELEASED; urgency=medium
+
+  * WIP (generated upon release).
+
+ -- Chris Lamb <lamby@debian.org>  Sat, 25 Apr 2020 10:17:48 +0100
+
 lintian (2.68.0) unstable; urgency=medium
 
   [ Chris Lamb ]
