--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,24 @@
-lintian (2.68.0+git) UNRELEASED; urgency=medium
+lintian (2.69.0) unstable; urgency=medium
 
-  * WIP (generated upon release).
+  * Summary of tag changes:
+    + Removed:
+      - pre-depends-directly-on-multiarch-support
 
- -- Chris Lamb <lamby@debian.org>  Sat, 25 Apr 2020 10:17:48 +0100
+  [ Chris Lamb ]
+  * Ignore build profiles when checking packages for "py3versions -s"
+    without the corresponding Build-Depends. (Closes: #958794)
+  * Remove the pre-depends-directly-on-multiarch-support tag; any package
+    pre-depending on multiarch-support will not be installable in bullseye.
+    (Closes: #798762)
+  * Move debhelper itself to compatibility level 13 so it does not emit
+    package-uses-old-debhelper-compat-version for itself.
+
+  [ Felix Lechner ]
+  * Bump recommended debhelper compat-level to 13; move experimental to 14.
+    (Closes: #958932)
+  * Fix common prefix detection for extracted tar files. (Closes: #958845)
+
+ -- Chris Lamb <lamby@debian.org>  Tue, 28 Apr 2020 19:46:15 +0000
 
 lintian (2.68.0) unstable; urgency=medium
 
