--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.69.0+git) UNRELEASED; urgency=medium
+
+  * WIP (generated upon release).
+
+ -- Chris Lamb <lamby@debian.org>  Tue, 28 Apr 2020 21:11:29 +0100
+
 lintian (2.69.0) unstable; urgency=medium
 
   * Summary of tag changes:
