--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.70.0+git) UNRELEASED; urgency=medium
+
+  * WIP (generated upon release).
+
+ -- Chris Lamb <lamby@debian.org>  Sat, 02 May 2020 16:31:13 +0100
+
 lintian (2.70.0) unstable; urgency=medium
 
   * Summary of tag changes:
