--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.69.0~bpo10+2) buster-backports; urgency=medium
+
+  * Revert to debhelper-compat level 12.
+
+ -- Chris Lamb <lamby@debian.org>  Sat, 02 May 2020 23:58:59 +0100
+
 lintian (2.69.0~bpo10+1) buster-backports; urgency=medium
 
   * Rebuild for buster-backports.
