--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.71.0+git) UNRELEASED; urgency=medium
+
+  * WIP (generated upon release).
+
+ -- Chris Lamb <lamby@debian.org>  Tue, 05 May 2020 19:40:50 +0100
+
 lintian (2.71.0) unstable; urgency=medium
 
   * Mark the debian-rules-uses-as-needed-linker-flag tag as being pedantic
