--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,27 @@
-lintian (2.71.0+git) UNRELEASED; urgency=medium
+lintian (2.72.0) unstable; urgency=medium
 
-  * WIP (generated at release time: please do not add entries below).
+  * Summary of tag changes:
+    + Added:
+      - package-contains-icon-cache-in-generic-dir
 
- -- Chris Lamb <lamby@debian.org>  Tue, 05 May 2020 19:40:50 +0100
+  [ Chris Lamb ]
+  * Check for packages installing /usr/share/icons/hicolor/icon-theme.cache
+    as they will invariably clash with other packages. (Closes: #959855)
+
+  [ Paul Wise ]
+  * Add "tigris.org" to the list of obsolete sites.
+  * Add several spelling corrections
+
+  [ Alex Muntada ]
+  * Correct the spelling of "XDG_DIR".
+
+  [ Felix Lechner ]
+  * Use aspcud solver in apt like the experimental buildds in an attempt to
+    restore Gitlab continuous integration tests.
+  * Ensure apt-get is non-interactive when installing apt-cudf and use
+    the cache.
+
+ -- Chris Lamb <lamby@debian.org>  Sat, 09 May 2020 13:14:55 +0000
 
 lintian (2.71.0) unstable; urgency=medium
 
