--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.72.0+git) UNRELEASED; urgency=medium
+
+  * WIP (generated at release time: please do not add entries below).
+
+ -- Chris Lamb <lamby@debian.org>  Sat, 09 May 2020 15:41:11 +0100
+
 lintian (2.72.0) unstable; urgency=medium
 
   * Summary of tag changes:
