--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.73.0+git) UNRELEASED; urgency=medium
+
+  * WIP (generated at release time: please do not add entries below).
+
+ -- Chris Lamb <lamby@debian.org>  Tue, 12 May 2020 23:31:54 +0100
+
 lintian (2.73.0) unstable; urgency=medium
 
   * Summary of tag changes:
