--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.74.0+git) UNRELEASED; urgency=medium
+
+  * WIP (generated at release time: please do not add entries below).
+
+ -- Chris Lamb <lamby@debian.org>  Sat, 16 May 2020 15:10:52 +0100
+
 lintian (2.74.0) unstable; urgency=medium
 
   [ Chris Lamb ]
