--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,13 @@
-lintian (2.74.0+git) UNRELEASED; urgency=medium
+lintian (2.75.0) unstable; urgency=medium
 
-  * WIP (generated at release time: please do not add entries below).
+  [ Chris Lamb ]
+  * Clarify the error messge when the file specified to check does not
+    exist. (Closes: #960970)
 
- -- Chris Lamb <lamby@debian.org>  Sat, 16 May 2020 15:10:52 +0100
+  [ Felix Lechner ]
+  * Strip comments in debian/rules correctly.
+
+ -- Chris Lamb <lamby@debian.org>  Tue, 19 May 2020 12:14:01 +0000
 
 lintian (2.74.0) unstable; urgency=medium
 
