--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,30 @@
-lintian (2.75.0+git) UNRELEASED; urgency=medium
+lintian (2.76.0) unstable; urgency=medium
 
-  * WIP (generated at release time: please do not add entries below).
+  * Summary of tag changes:
+    + Added:
+      - depends-on-misc-pre-depends
 
- -- Chris Lamb <lamby@debian.org>  Tue, 19 May 2020 14:39:18 +0100
+  [ Chris Lamb ]
+  * Check for packages that include ${misc:Pre-Depends) in the Depends
+    field. (Closes: #961290)
+
+  [ Raul Benencia ]
+  * Fix "em" dashes in Lintian manual.
+
+  [ Paul Wise ]
+  * Add several spelling corrections.
+  * Capitalise "Verilog" spelling correction.
+
+  [ Felix Lechner ]
+  * In the CI pipelines, request more detailed output when installing build
+    prerequisites.
+  * Ignore unknown tags when generating profiles and disconnect the "main"
+    profile from "ftp-master-auto-reject"
+
+  [ Simon Quigley ]
+  * Allow for non-Debian profiles to specify the location of Debian VCSes.
+
+ -- Chris Lamb <lamby@debian.org>  Sat, 23 May 2020 09:31:35 +0000
 
 lintian (2.75.0) unstable; urgency=medium
 
