--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,29 @@
-lintian (2.76.0+git) UNRELEASED; urgency=medium
+lintian (2.77.0) unstable; urgency=medium
 
-  * WIP (generated at release time: please do not add entries below).
+  [ Simon Quigley ]
+  * Add a new --fail-on command-line option for more control over the exit
+    status. (Closes: #709932)
 
- -- Chris Lamb <lamby@debian.org>  Sat, 23 May 2020 10:33:08 +0100
+  [ Felix Lechner ]
+  * Fix several 'TODO' tests using the "literal" match strategy.
+    (Closes: #921112)
+  * Reverse the exit statuses for program errors and policy violations.
+    (Re: #709932)
+  * Pin installation of debhelper to -backports in the continuous
+    integration pipeline for buster.
+  * Use the Config::Tiny Perl module to parse configuration files.
+  * Merge two stages of the Gitlab CI pipeline.
+
+  [ Peter Pentchev ]
+  * Fix a Python 2.x -> 3.x typo in a tag description.
+
+  [ Chris Lamb ]
+  * Refresh data/fields/perl-provides.
+
+  [ Paul Wise ]
+  * Add several spelling corrections.
+
+ -- Chris Lamb <lamby@debian.org>  Wed, 27 May 2020 09:13:37 +0000
 
 lintian (2.76.0) unstable; urgency=medium
 
