--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.77.0+git) UNRELEASED; urgency=medium
+
+  * WIP (generated at release time: please do not add entries below).
+
+ -- Chris Lamb <lamby@debian.org>  Wed, 27 May 2020 10:14:46 +0100
+
 lintian (2.77.0) unstable; urgency=medium
 
   [ Simon Quigley ]
