--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.78.0+git) UNRELEASED; urgency=medium
+
+  * WIP (generated at release time: please do not add entries below).
+
+ -- Chris Lamb <lamby@debian.org>  Sat, 30 May 2020 10:20:31 +0100
+
 lintian (2.78.0) unstable; urgency=medium
 
   * Summary of tag changes:
