--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.79.0+git) UNRELEASED; urgency=medium
+
+  * WIP (generated at release time: please do not add entries below).
+
+ -- Chris Lamb <lamby@debian.org>  Mon, 01 Jun 2020 10:17:27 +0100
+
 lintian (2.79.0) unstable; urgency=medium
 
   [ Felix Lechner ]
