--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,25 @@
-lintian (2.79.0+git) UNRELEASED; urgency=medium
+lintian (2.80.0) unstable; urgency=medium
 
-  * WIP (generated at release time: please do not add entries below).
+  * Summary of tag changes:
+    + Added:
+      - national-encoding-in-text-file
 
- -- Chris Lamb <lamby@debian.org>  Mon, 01 Jun 2020 10:17:27 +0100
+  [ Chris Lamb ]
+  * Check for execute_after/execute_before spelling mistakes, etc., just
+    like for override_.
+
+  [ Felix Lechner ]
+  * Add check for nationally encoded text files in installation packages.
+    (Closes: #796170)
+  * Mention discussion about allowing some paths for the
+    script-not-executable tag. (Closes: #368792)
+  * Fix regex for Guile bytecode with respect to ELF-related tags.
+    (Closes: #961961)
+
+  [ Paul Wise ]
+  * Add several spelling corrections.
+
+ -- Chris Lamb <lamby@debian.org>  Wed, 03 Jun 2020 09:30:24 +0000
 
 lintian (2.79.0) unstable; urgency=medium
 
